--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     <div class="row"> <!-- my first row-->
 
       <div class="col"> <!-- First column-->
-      <img src="Gallery/5.jpeg" width="500" height="300">
+      <img src="gallery/5.jpeg" width="500" height="300">
       </div>
 
       <div class="col">   <!-- Second column-->
@@ -174,7 +174,7 @@
       </div> 
 
       <div class="col"> 
-           <img src="Gallery/14.jpeg" width="600" height="350">
+           <img src="allery/14.jpeg" width="600" height="350">
       </div>
     
     </div>
